fixed overflow issue, it was caused by content wrapper width 100vw, changed it to 100%

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,6 +4,3 @@
 .custom-logo-color {
     filter: invert(18%) sepia(63%) saturate(2385%) hue-rotate(170deg) brightness(90%) contrast(110%);
 }
-body {
-    overflow-x: hidden;
-}
