--- a/src/assets/wrapper.css
+++ b/src/assets/wrapper.css
@@ -1,5 +1,5 @@
 .content-wrapper {
-    width: 100vw;
+    width: 100%;
     padding: 0.9vw;
     margin: 0 auto;
 
